--- a/portal-de-noticias/app/views/admin/form_add_noticia.ejs
+++ b/portal-de-noticias/app/views/admin/form_add_noticia.ejs
@@ -13,6 +13,15 @@
 			<label>Título</label><br />
 			<input name="titulo" id="titulo" type="text" placeholder="Título da notícia" /><br /><br />
 			
+			<label>Resumo</label><br />
+			<input name="resumo" id="resumo" type="text" placeholder="Resumo da notícia" /><br /><br />
+			
+			<label>Nome do autor</label><br />
+			<input name="autor" id="autor" type="text" placeholder="Autor da notícia" /><br /><br />
+			
+			<label>Data de publicação</label><br />
+			<input name="data_noticia" id="data_noticia" type="date" placeholder="Data da notícia" /><br /><br />
+			
 			<label>Notícia</label><br />
 			<textarea name="noticia" id="noticia" cols="30" rows="10" placeholder="Conteúdo da notícia"></textarea><br /><br />
 
