Validação de dados do formulário criada

--- a/portal-de-noticias/app/views/admin/form_add_noticia.ejs
+++ b/portal-de-noticias/app/views/admin/form_add_noticia.ejs
@@ -8,7 +8,17 @@
 
 		<h1>Adicionar notícia</h1>
 		<br />
-
+		
+		<% if(valid){ %>
+			<ul>
+				<% for(var i=0; i < valid.length; i++){ %>
+					<li>
+						<%= valid[i].msg; %>
+					</li>
+				<% } %>
+			</ul>	
+		<% } %>
+		
 		<form action="/noticias/salvar" method="post">
 			<label>Título</label><br />
 			<input name="titulo" id="titulo" type="text" placeholder="Título da notícia" /><br /><br />
