Lógica para envio de mensagens criada via on() e emit()

--- a/multiroom-chat/app/views/chat.ejs
+++ b/multiroom-chat/app/views/chat.ejs
@@ -104,16 +104,16 @@
 		<nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
 			<div class="container">
 				<div class="panel-body campo-mensagem">
-					<form>
-						<div class="col-md-12">
-							<div class="input-group">
-								<input type="text" class="form-control" placeholder="Mensagem">
-								<span class="input-group-btn">
-									<button class="btn btn-default" type="button">></button>
-								</span>
-							</div>
+					
+					<div class="col-md-12">
+						<div class="input-group">
+							<input type="text" class="form-control" placeholder="Mensagem" id="mensagem">
+							<span class="input-group-btn">
+								<button class="btn btn-default" type="button" id="enviar_mensagem">></button>
+							</span>
 						</div>
-					</form>
+					</div>
+					
 				</div>
 			</div>
 		</nav>		
@@ -124,6 +124,13 @@
 
 		<script>
 			var socket = io("http://localhost:3000"); // instância do objeto socket.io
+
+			$("#enviar_mensagem").click(function(){
+				socket.emit(
+					"msgParaServer",
+					{ apelido : "", mensagem : $("#mensagem").val() }
+				);
+			});
 
 			socket.on("msgParaCliente", function(data){
 				var html = "";
