Gato realizado para evitar duplicidade de nomes na aba Participantes

--- a/multiroom-chat/app/views/chat.ejs
+++ b/multiroom-chat/app/views/chat.ejs
@@ -123,6 +123,8 @@
 						apelido_atualizado : $("#apelido_atualizado").val()
 					}
 				);
+
+				$("#apelido_atualizado").val(1);
 			});
 
 			socket.on("msgParaCliente", function(data){
