--- a/rpg-game-of-thrones/app/views/jogo.ejs
+++ b/rpg-game-of-thrones/app/views/jogo.ejs
@@ -19,6 +19,26 @@
 				$("#btn_sair").click(function(){
 					window.location.href = "/sair";
 				});
+
+				$("#btn_suditos").click(function(){
+					$.ajax({
+						url : "/suditos",
+						method : "get",
+						success : function(data){
+							$("#acoes").html(data);
+						}
+					});
+				});
+
+				$("#btn_pergaminhos").click(function(){
+					$.ajax({
+						url : "/pergaminhos",
+						method : "get",
+						success : function(data){
+							$("#acoes").html(data);
+						}
+					});
+				});
 			});
 		</script>
 
@@ -69,7 +89,7 @@
 			<div class="row">
 				<div class="col-sm-3"></div>
 				<div class="col-sm-9">
-					<div class="acoes"></div>					
+					<div class="acoes" id="acoes">O que você deseja fazer?</div>					
 				</div>
 			</div>
 			
@@ -80,12 +100,12 @@
 			
 				<div class="row">
 					<div class="col-sm-1">
-						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões"/>
+						<img src="images/outros/suditos.jpg" title="Aldeões" alt="Aldeões" id="btn_suditos"/>
 						<span><%= jogo.suditos %></span>
 					</div>
 					
 					<div class="col-sm-1">
-						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos"/>
+						<img src="images/outros/pergaminho.jpg" title="Pergaminhos" alt="Pergaminhos" id="btn_pergaminhos"/>
 					</div>
 					
 					<div class="col-sm-8"></div>
