--- a/rpg-game-of-thrones/app/views/jogo.ejs
+++ b/rpg-game-of-thrones/app/views/jogo.ejs
@@ -21,6 +21,7 @@
 				});
 
 				$("#btn_suditos").click(function(){
+					$("#msg_erros").hide();
 					$.ajax({
 						url : "/suditos",
 						method : "get",
@@ -31,6 +32,7 @@
 				});
 
 				$("#btn_pergaminhos").click(function(){
+					$("#msg_erros").hide();
 					$.ajax({
 						url : "/pergaminhos",
 						method : "get",
@@ -56,6 +58,12 @@
 
 	    <div class="container">
 	    	
+			<% if(comando_invalido == "S"){ %>
+				<div class="alert alert-danger" id="msg_erros">
+					<strong>Operação inválida! Verifique se todos os campos foram preenchidos!</strong>
+				</div>
+			<% } %>
+
 			<div class="row">
 	    		<div class="col-sm-3 casa">
 					<img src="images/casa_<%=img_casa%>.jpg" />
