--- a/rpg-game-of-thrones/app/views/jogo.ejs
+++ b/rpg-game-of-thrones/app/views/jogo.ejs
@@ -21,7 +21,7 @@
 				});
 
 				$("#btn_suditos").click(function(){
-					$("#msg_erros").hide();
+					$("#msg").hide();
 					$.ajax({
 						url : "/suditos",
 						method : "get",
@@ -32,7 +32,7 @@
 				});
 
 				$("#btn_pergaminhos").click(function(){
-					$("#msg_erros").hide();
+					$("#msg").hide();
 					$.ajax({
 						url : "/pergaminhos",
 						method : "get",
@@ -58,9 +58,15 @@
 
 	    <div class="container">
 	    	
-			<% if(comando_invalido == "S"){ %>
-				<div class="alert alert-danger" id="msg_erros">
-					<strong>Operação inválida! Verifique se todos os campos foram preenchidos!</strong>
+			<% if(msg == "ERROR"){ %>
+				<div class="alert alert-danger" id="msg">
+					<strong>Ação inválida! Verifique se todos os campos foram preenchidos!</strong>
+				</div>
+			<% } %>
+
+			<% if(msg == "SUCCESS"){ %>
+				<div class="alert alert-success" id="msg">
+					<strong>Ação realizada com sucesso!</strong>
 				</div>
 			<% } %>
 
