Correção do objeto FormData realizado

--- a/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -30,7 +30,7 @@
 
 				$('#btn-publicar').click(function(){
 					// criando formData
-					var formData = new formData();
+					var formData = new FormData();
 
 					var arquivo = document.getElementById("arquivo").files[0];
 					var titulo = document.getElementById("titulo").value;
