--- a/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -30,7 +30,7 @@
 										'<span class="titulo">' +
 											data[i].titulo +
 										'</span>' +
-										'<img src="http://localhost:8080/uploads/' + data[i].url_imagem + '" />' +
+										'<img src="http://localhost:8080/imagens/' + data[i].url_imagem + '" />' +
 									'</div>'
 								);
 							}
