--- a/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -90,7 +90,7 @@
 
 	<body>
 
-		<nav class="navbar navbar-default">
+		<nav class="navbar navbar-default navbar-fixed-top">
 			<div class="container">
 				<div class="col-md-12">
 					<div class="container-fluid">
@@ -101,7 +101,7 @@
 			</div>
 		</nav>
 
-		<div class="container">
+		<div class="container navbar_espaco">
 			<div class="col-md-2"></div>
 			<div class="col-md-8" id="container_timeline"></div>
 			
