--- a/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
+++ b/instagram_clone/cliente_web_instagram_clone/app/views/home/padrao.ejs
@@ -50,7 +50,9 @@
 								xhr.setRequestHeader("Content-Type", "application/json");
 
 								xhr.onload = function(){
-									alert(xhr.responseText);
+									if(xhr.status === 200){
+										window.location.href = "/home";
+									}
 								}
 
 								xhr.send(JSON.stringify({ comentario : comentario }));
